<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_padding"
    tools:context=".activities.RegisterActivity">

    <EditText
        android:id="@+id/register_et_name"
        android:hint="@string/user_name"
        android:textSize="@dimen/default_button_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/default_top_margin"
        android:layout_marginBottom="@dimen/default_bottom_margin"/>

    <EditText
        android:id="@+id/register_et_email"
        android:hint="@string/user_email"
        android:textSize="@dimen/default_button_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/register_et_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/default_top_margin"
        android:layout_marginBottom="@dimen/default_bottom_margin"/>

    <EditText
        android:id="@+id/register_et_password"
        android:hint="@string/user_password"
        android:textSize="@dimen/default_button_text"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/register_et_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/default_top_margin"
        android:layout_marginBottom="@dimen/default_bottom_margin"/>

    <Spinner
        android:id="@+id/register_spinner_user_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/register_et_password"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/default_top_margin"
        android:layout_marginBottom="@dimen/default_bottom_margin"/>

    <EditText
        android:id="@+id/register_et_landlord_email"
        android:hint="@string/landlord_email"
        android:textSize="@dimen/default_button_text"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/register_spinner_user_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/default_top_margin"
        android:layout_marginBottom="@dimen/default_bottom_margin"/>

    <Button
        android:id="@+id/register_button_register"
        android:text="@string/main_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>




</androidx.constraintlayout.widget.ConstraintLayout>